--- a/BackEnd/Myproject/Myproject/src/main/resources/application.yaml
+++ b/BackEnd/Myproject/Myproject/src/main/resources/application.yaml
@@ -11,6 +11,13 @@ spring:
 
   jpa:
     hibernate:
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
       ddl-auto: update
     show-sql: true
+
+    properties:
+      hibernate:
+        physical_naming_strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 
