--- a/BackEnd/cart_service/src/main/resources/application.yaml
+++ b/BackEnd/cart_service/src/main/resources/application.yaml
@@ -1,9 +1,9 @@
 server:
   port: 8084
-  servlet:
-    context-path: /CartDatabase
 
 spring:
+  application:
+    name: cart-service
   datasource:
     url: jdbc:mysql://localhost:3306/CartDatabase
     username: root
@@ -16,6 +16,7 @@ spring:
 
 eureka:
   client:
-    register-with-eureka: false
-    fetch-registry: false
-
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
