--- a/BackEnd/eureka-service/pom.xml
+++ b/BackEnd/eureka-service/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>Myproject</groupId>
-	<artifactId>eureka_service</artifactId>
+	<artifactId>eureka-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>eureka_service</name>
 	<description>My test project</description>
