--- a/BackEnd/order_service/src/main/resources/application.yaml
+++ b/BackEnd/order_service/src/main/resources/application.yaml
@@ -1,9 +1,10 @@
 server:
   port: 8085
-  servlet:
-    context-path: /OrderDatabase
+
 
 spring:
+  application:
+    name: order-service
   datasource:
     url: jdbc:mysql://localhost:3306/OrderDatabase
     username: root
@@ -16,8 +17,14 @@ spring:
 
 
 eureka:
+  instance:
+    hostname: localhost
+    prefer-ip-address: false
+
   client:
-    register-with-eureka: false
-    fetch-registry: false
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
 
 
