--- a/BackEnd/product_service/src/main/resources/application.yaml
+++ b/BackEnd/product_service/src/main/resources/application.yaml
@@ -1,9 +1,9 @@
 server:
   port: 8081
-  servlet:
-    context-path: /ProductDatabase
 
 spring:
+  application:
+    name: product-service
   datasource:
     url: jdbc:mysql://localhost:3306/ProductDatabase
     username: root
@@ -15,6 +15,12 @@ spring:
     show-sql: true
 
 eureka:
+  instance:
+    hostname: localhost
+    prefer-ip-address: false
+
   client:
-    register-with-eureka: false
-    fetch-registry: false
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
