--- a/BackEnd/user_service/src/main/resources/application.yaml
+++ b/BackEnd/user_service/src/main/resources/application.yaml
@@ -1,9 +1,9 @@
 server:
   port: 8082
-  servlet:
-    context-path: /UserDatabase
 
 spring:
+  application:
+    name: user-service
   datasource:
     url: jdbc:mysql://localhost:3306/UserDatabase
     username: root
@@ -15,9 +15,14 @@ spring:
     show-sql: true
 
 eureka:
+  instance:
+    hostname: localhost
+    prefer-ip-address: false
   client:
-    register-with-eureka: false
-    fetch-registry: false
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
 
 
 jwt:
