--- a/BackEnd/user_service/src/main/resources/application.yaml
+++ b/BackEnd/user_service/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
   application:
     name: user-service
   datasource:
-    url: jdbc:mysql://localhost:3306/UserDatabase
+    url: jdbc:mysql://mysql-user:3306/UserDatabase
     username: root
     password: "@Luvanthanh24072005"
 
